[project]
name = "stljax"
version = "1.1.3"
description = "stlcg with jax"
readme = "README.md"
authors = [
    { name = "Karen Leung", email = "kymleung@uw.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "jax[cuda13]>=0.8.0",
]

[project.scripts]
stljax = "stljax:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
